--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   position: relative;
   top: 60px;
   display: flex;
-  height: 50vh;
+  height: 300px;
   width: 100%;
   background-color: rgba(229, 207, 130, 0.303);
   box-shadow: 0px 15px 20px -15px rgb(5, 5, 5);
@@ -56,7 +56,7 @@ body {
   z-index: 1;
 }
 .carousel:hover .slide {
-  animation-play-state: paused;
+  animation-play-state: running;
 }
 .slide {
   height: 100%;
@@ -66,9 +66,9 @@ body {
   animation: slideshow 50s linear infinite;
 }
 .slide-img {
-  height: calc(100% - 40px);
-  width: auto;
-  margin: 0 40px;
+  height: calc(100% - 20px);
+  width: 250px;
+  margin: 0 20px;
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
   flex-shrink: 0;
@@ -114,45 +114,6 @@ body {
   }
 }
 @media (max-width: 768px) {
-  .carousel {
-    position: relative;
-    width: 80%;
-    height: 50vh;
-    display: block;
-  }
-  .slide {
-    flex-direction: column;
-    animation: slideshow 20s linear infinite;
-  }
-  .slide-img {
-    width: 80%;
-    height: auto;
-  }
-  .carousel::before {
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 40px;
-    background: linear-gradient(to bottom, #f4f4f6ab 10%, transparent 100%);
-  }
-  .carousel::after {
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: auto;
-    width: 100%;
-    height: 40px;
-    background: linear-gradient(to top, #f4f4f6ab 10%, transparent 100%);
-  }
-  @keyframes slideshow {
-    0% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: translateY(-100%);
-    }
-  }
   .neon-text {
     bottom: 75px;
     font-size: 30px;
